syntax = "proto3";

// udp消息包格式

option csharp_namespace = "MsgDefine";

enum TUdpControlFlag
{
	PROTO_FLAG_ERROR = 0;
	PROTO_CMD = 1;
	PROTO_NEED_ACK = 128;
};

enum TUdpControlCmd
{
	PROTO_CMD_ERROR = 0;
	PROTO_CMD_ACK = 1;
	PROTO_CMD_HEARTBEAT = 2;
};

message MsgDataHead
{
	optional uint32 control_flag = 1;
	optional uint32 control_cmd  = 2;
	optional uint32 ack_idx      = 3;
	optional uint32 msg_idx      = 4;
}

message MsgSession
{
	optional fixed64 session = 1;
	optional fixed32 check   = 2;
	optional uint32  index   = 3;
}

message MsgPart
{
	optional uint32 msg_idx  = 1;
	optional uint32 part_idx = 2;
	optional uint32 part_max = 3;
	optional string msg_name = 4;
	optional bytes  msg_body = 5;
}
